# impcore-rs

./: .gitignore  Cargo.toml  README.md  TODO  alloc.ll  bench  build.rs  error.ll  hw1.imp  numbers.csv  slow_debug.ll
examples/: anon-bug.rs  crane.rs  hello_native.rs  inkwell-fn.rs  jit-function.rs  llvm-sys.rs  regex.rs
examples/kaleidoscope/: implementation_typed_pointers.rs  main.rs  parsing.rs
imp/: allfours.imp  alloc.c  alloc.ll  basic.imp  broken.imp  bufread.imp  error.ll  ez.imp  hard.imp  hello.imp  hw1.imp  import.imp  latedef.imp  other.imp  parsetest.imp  slow.imp  slow.py  unit.imp
imp/stdlib/: chars.imp  word.imp
linklibs/: stdin.bc  stdin.c
misc/: a.out  broken.js  broken.py  bufread.c  fileio.c  fileio.ll  global.c  global.ll  globalptrbench.c  globalptrbench.ll  intstrings.c  intstrings.ll  logical.c  logical.ll  slow.py  switch.c  switch.ll
misc/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/: ast.rs  ast_OLD.rs  codegen.rs  compile.rs  compiler.rs  env.rs  environment.rs  flow.rs  functions.rs  globals.rs  implib.rs  io.rs  jit.rs  jit_OLD.rs  lazygraph.rs  lib.rs  main.rs  parse.rs  parser.rs  preprocessor.rs  static_analysis.rs  tests.rs  translation.rs  types.rs
src/grammar/: impcore.pest  impcore_short.pest  llvm-style.pest  macros.pest  match.pest
src/jit/: codegen.rs  defgen.rs  implib.rs
src/jit_OLD/: codegen.rs
src/parser/: def_parse.rs  expr_parse.rs  macro_parse.rs
stdlib/: chars.imp
