[package]
name = "impcore-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
inkwell = { version = "0.1.0", features = ["llvm13-0"] }
pest = "2.5.4"
pest_derive = "2.5.4"
regex = "1.7.1"

[dev-dependencies]
lazy_static = "1.4.0"
regex = "1.7.1"


